--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "cwd": "${workspaceFolder}",
             "runtimeExecutable": "deno",
-            "runtimeArgs": ["run", "--unstable", "--inspect-brk","-A", "mod.ts", "c", "account"],
+            "runtimeArgs": ["run", "--unstable", "--inspect-brk","-A", "mod.ts", "-c", "account"],
             "outputCapture": "std",
             "port": 9229,
         },
@@ -17,7 +17,7 @@
             "request": "launch",
             "cwd": "${workspaceFolder}",
             "runtimeExecutable": "deno",
-            "runtimeArgs": ["run", "--unstable", "--inspect-brk","-A", "mod.ts", "s", "account"],
+            "runtimeArgs": ["run", "--unstable", "--inspect-brk","-A", "mod.ts", "-s", "test", "-d"],
             "outputCapture": "std",
             "port": 9229,
         }
