--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,25 +1,42 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Deno Create CSV",
-            "type": "node",
-            "request": "launch",
-            "cwd": "${workspaceFolder}",
-            "runtimeExecutable": "deno",
-            "runtimeArgs": ["run", "--unstable", "--inspect-brk","-A", "mod.ts", "-c", "account"],
-            "outputCapture": "std",
-            "port": 9229,
-        },
-        {
-            "name": "Deno Save To Props",
-            "type": "node",
-            "request": "launch",
-            "cwd": "${workspaceFolder}",
-            "runtimeExecutable": "deno",
-            "runtimeArgs": ["run", "--unstable", "--inspect-brk","-A", "mod.ts", "-s", "test", "-d"],
-            "outputCapture": "std",
-            "port": 9229,
-        }
-    ]
-} 
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Deno Create CSV",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "deno",
+      "runtimeArgs": [
+        "run",
+        "--unstable",
+        "--inspect-brk",
+        "-A",
+        "mod.ts",
+        "-c",
+        "account"
+      ],
+      "outputCapture": "std",
+      "port": 9229
+    },
+    {
+      "name": "Deno Save To Props",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "deno",
+      "runtimeArgs": [
+        "run",
+        "--unstable",
+        "--inspect-brk",
+        "-A",
+        "mod.ts",
+        "-s",
+        "test",
+        "-d"
+      ],
+      "outputCapture": "std",
+      "port": 9229
+    }
+  ]
+}
