--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,7 @@
       "runtimeArgs": [
         "run",
         "--unstable",
+        "--import-map=import_map.json",
         "--inspect-brk",
         "-A",
         "mod.ts",
@@ -28,12 +29,29 @@
       "runtimeArgs": [
         "run",
         "--unstable",
+        "--import-map=import_map.json",
         "--inspect-brk",
         "-A",
         "mod.ts",
         "-s",
         "test",
         "-d"
+      ],
+      "outputCapture": "std",
+      "port": 9229
+    },
+    {
+      "name": "Deno Test",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "deno",
+      "runtimeArgs": [
+        "test",
+        "--unstable",
+        "--import-map=import_map.json",
+        "--inspect-brk",
+        "-A"
       ],
       "outputCapture": "std",
       "port": 9229
