--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,58 +3,40 @@
   "configurations": [
     {
       "name": "Deno Create CSV",
-      "type": "node",
       "request": "launch",
+      "type": "pwa-node",
+      "program": "${workspaceFolder}/mod.ts",
       "cwd": "${workspaceFolder}",
-      "runtimeExecutable": "deno",
+      "runtimeExecutable": "/home/terr/.deno/bin/deno",
       "runtimeArgs": [
         "run",
-        "--unstable",
-        "--import-map=import_map.json",
         "--inspect-brk",
-        "-A",
-        "mod.ts",
+        "--allow-all"
+      ],
+      "args": [
         "-c",
         "account"
       ],
-      "outputCapture": "std",
-      "port": 9229
+      "attachSimplePort": 9229
     },
     {
       "name": "Deno Save To Props",
-      "type": "node",
       "request": "launch",
+      "type": "pwa-node",
+      "program": "${workspaceFolder}/mod.ts",
       "cwd": "${workspaceFolder}",
-      "runtimeExecutable": "deno",
+      "runtimeExecutable": "/home/terr/.deno/bin/deno",
       "runtimeArgs": [
         "run",
-        "--unstable",
-        "--import-map=import_map.json",
         "--inspect-brk",
-        "-A",
-        "mod.ts",
+        "--allow-all"
+      ],
+      "args": [
         "-s",
         "test",
         "-d"
       ],
-      "outputCapture": "std",
-      "port": 9229
-    },
-    {
-      "name": "Deno Test",
-      "type": "node",
-      "request": "launch",
-      "cwd": "${workspaceFolder}",
-      "runtimeExecutable": "deno",
-      "runtimeArgs": [
-        "test",
-        "--unstable",
-        "--import-map=import_map.json",
-        "--inspect-brk",
-        "-A"
-      ],
-      "outputCapture": "std",
-      "port": 9229
+      "attachSimplePort": 9229
     }
   ]
 }
