--- a/deno.json
+++ b/deno.json
@@ -2,5 +2,10 @@
   "compilerOptions": {
     "noUnusedLocals": true
   },
-  "importMap": "./import_map.json"
+  "imports": {
+    "@std/assert": "jsr:@std/assert@^1.0.13",
+    "@std/cli": "jsr:@std/cli@^1.0.20",
+    "@std/csv": "jsr:@std/csv@^1.0.6",
+    "@std/path": "jsr:@std/path@^1.1.1"
+  }
 }
