--- a/deno.json
+++ b/deno.json
@@ -1,11 +1,20 @@
 {
-  "compilerOptions": {
-    "noUnusedLocals": true
-  },
-  "imports": {
-    "@std/assert": "jsr:@std/assert@^1.0.13",
-    "@std/cli": "jsr:@std/cli@^1.0.20",
-    "@std/csv": "jsr:@std/csv@^1.0.6",
-    "@std/path": "jsr:@std/path@^1.1.1"
-  }
+	"tasks": {
+		"cov": "deno test --coverage=cov_profile && deno coverage cov_profile && rm -r ./cov_profile"
+	},
+	"fmt": {
+		"singleQuote": true,
+		"useTabs": true,
+		"lineWidth": 100,
+		"exclude": ["**/*.md"]
+	},
+	"compilerOptions": {
+		"noUnusedLocals": true
+	},
+	"imports": {
+		"@std/assert": "jsr:@std/assert@^1.0.13",
+		"@std/cli": "jsr:@std/cli@^1.0.20",
+		"@std/csv": "jsr:@std/csv@^1.0.6",
+		"@std/path": "jsr:@std/path@^1.1.1"
+	}
 }
